Fixed touch screen use on mobile so the distanceX is correct each time. Added visibility of DZ link for extra debugging space on mobile

--- a/css/dayZeroStyle.css
+++ b/css/dayZeroStyle.css
@@ -144,7 +144,7 @@
 
 @media only screen and (max-width: 1100px) {
   #DZprojLinkA {
-    display: none;
+    display: block;
   }
 
   .DZAB {
